# ATS-CV-Evaluator

./: .gitignore  2026-04-23-225002-investiga-en-internete-como-hacer-un-ats-applican.txt  Makefile  PROJECT_CONTEXT.txt  README.md  pyproject.toml
src/ats_evaluator/: cli.py  config.py  errors.py
src/ats_evaluator/data/: skills_taxonomy.json
src/ats_evaluator/domain/: __init__.py  cv.py  enums.py  feedback.py  job.py  scoring.py
src/ats_evaluator/extraction/: __init__.py  claude_client.py  cv_extractor.py  jd_extractor.py  mode.py  response_validator.py
src/ats_evaluator/extraction/llm/: cv_extractor.py  jd_extractor.py
src/ats_evaluator/extraction/local/: __init__.py  cv_extractor.py  jd_extractor.py  metrics_extractor.py  section_detector.py  skills_db.py
src/ats_evaluator/extraction/prompts/: __init__.py  cv_extraction.py  jd_extraction.py  schemas.py
src/ats_evaluator/feedback/: __init__.py  generator.py  missing_keywords.py
src/ats_evaluator/parsers/: __init__.py  base.py  docx_parser.py  format_quality.py  parser_factory.py  pdf_parser.py  text_parser.py
src/ats_evaluator/reporting/: __init__.py  formatters.py  json_export.py  terminal.py
src/ats_evaluator/scoring/: __init__.py  engine.py  keyword_matcher.py  recency.py  semantic_matcher.py  weights.py
src/ats_evaluator/scoring/dimensions/: __init__.py  achievements.py  base.py  education.py  experience.py  formatting.py  hard_skills.py  soft_skills.py  title_alignment.py
src/ats_evaluator/web/: app.py  ui.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_score_pipeline.py  test_web_app.py
tests/unit/: test_config.py  test_local_extractors.py  test_parsers.py  test_reporting.py  test_response_validator.py
tests/unit/domain/: test_immutability.py
tests/unit/scoring/: test_dimensions.py  test_engine.py  test_hard_skills.py  test_keyword_matcher.py  test_recency.py  test_semantic_and_contact.py
