[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ats-evaluator"
version = "0.1.0"
description = "Personal ATS resume evaluator powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "rich>=13.0",
    "typer[all]>=0.12",
    "python-dateutil>=2.9",
    "jsonschema>=4.23",
]

[project.scripts]
ats = "ats_evaluator.cli:app"

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.9"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-dateutil",
    "types-jsonschema",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ats_evaluator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ats_evaluator --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/ats_evaluator"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
