[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ats-evaluator"
version = "0.1.0"
description = "Personal ATS resume evaluator powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "rich>=13.0",
    "typer[all]>=0.12",
    "python-dateutil>=2.9",
    "jsonschema>=4.23",
    # spacy is optional — install via: pip install ats-evaluator[local-nlp]
]

[project.scripts]
ats = "ats_evaluator.cli:app"

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.9"]
local-nlp = [
    "spacy>=3.7",
]
semantic = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-dateutil",
    "types-jsonschema",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ats_evaluator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ats_evaluator --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/ats_evaluator"]

[tool.coverage.report]
omit = [
    "*/web/ui.py",                   # static HTML string — no logic to test
    "*/extraction/llm/*",            # covered via integration; mocked in unit tests
    "*/scoring/dimensions/base.py",  # Protocol definition only
    "*/scoring/semantic_matcher.py", # only active when sentence-transformers installed
    "*/extraction/cv_extractor.py",  # legacy shim replaced by extraction/llm/
    "*/extraction/jd_extractor.py",  # legacy shim replaced by extraction/llm/
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
